# Agent3Sigma-Canary

./: README.md  README_zh.md  config.example.yaml  pyproject.toml  setup.sh  tracee_config.yaml
batch_run/: indirect.sh  memory.sh  skills_poison.sh
docs/: system_trajectory_en.md  system_trajectory_zh.md  task-markdown-format.en.md  task-markdown-format.zh.md
leaderboard/: README.md  build.py  index.html
scripts/: benchmark.py  lib_agent.py  lib_attacks.py  lib_docker.py  lib_grading.py  lib_tasks.py  lib_tracee.py  lib_tracee_grading.py  run.sh  tracee_correlate.py  tracee_grade_offline.py
tasks/: TASK_TEMPLATE.md
tasks/system_trajectory_demo/: task_8000_ssh-keygen-helper-time-based.md  task_8001_ssh-keygen-helper-file-based.md  task_8002_ssh-keygen-helper-binary.md
workflow/: README.md  USER.md  workflow_step_1_image_builder.sh
workflow/images/offical_clawkeeper/: Dockerfile
workflow/images/offical_secureclaw/: Dockerfile
workflow/images/offical_shield/: Dockerfile
workflow/images/official/: Dockerfile
workflow_analysis/: app.py  start.sh  stop.sh
workflow_analysis/templates/: index.html
